fix spacing

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
 body {
   font-family: 'Roboto', sans-serif;
-  letter-spacing:-10px;
+  letter-spacing:-5px;
   background:#333;
   background-size:100%;
   color:#F9F9F9;
